--- a/public/SignUp.html
+++ b/public/SignUp.html
@@ -3,7 +3,7 @@
   <head>
     <title>SignUp</title>
   </head>
-  <link href="./Css/signUp.css" rel="stylesheet">
+  <link href="./CSS/signUp.css" rel="stylesheet">
   <script src="./Script/signup_script.js" defer></script>
   
   <body>
