--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
   <head>
     <title>LogIn</title>
   </head>
-  <link href="./Css/login.css" rel="stylesheet">
+  <link href="./CSS/login.css" rel="stylesheet">
   <script src="./Script/login_script.js" defer></script>
   <body>
     <fieldset>      
