--- a/public/user_page.html
+++ b/public/user_page.html
@@ -28,7 +28,7 @@
     ></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./Css/user_style.css" />
+    <link rel="stylesheet" href="./CSS/user_style.css" />
     <script src="./Script/user_script.js" defer></script>
   </head>
 
